--- a/TO-BDD/appsettings.json
+++ b/TO-BDD/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=TO-BDD;Trusted_Connection=True;"
+    //"SqlConnectionString": "Server=(localdb)\\local;Database=TO-BDD;Trusted_Connection=True;"
   }
 }
