--- a/TO-DBB-Tests/TO-DBB-Tests.csproj
+++ b/TO-DBB-Tests/TO-DBB-Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.3" />
     <PackageReference Include="MudBlazor" Version="6.1.4" />
